made the height of each image equal and proportional

--- a/starter-gallery.html
+++ b/starter-gallery.html
@@ -8,12 +8,12 @@
 
 <body>
 	<h1>Disc Golf Images</h1>
-    <img src = "documents/Disc_golf_basket_2.jpg" alt = "image of disc golf basket"></img>
+    <img src = "documents/Disc_golf_basket_2.jpg" alt = "image of disc golf basket" width = "256px" height = "451px"></img>
     <p>
     Tiia Monto [<a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File:Disc_golf_basket_2.jpg">via Wikimedia Commons</a></br>
     No changes were made to the image above.
     </p>
-    <img src = "documents/disc-golf-putters.jpg" alt = "image of a few golf discs"></img></br>
-    <img src = "documents/disc-golf-tee-pad.jpg" alt = "image of a disc golf tee pad"></img>
+    <img src = "documents/disc-golf-putters.jpg" alt = "image of a few golf discs" width = "762px" height = "451px"></img></br>
+    <img src = "documents/disc-golf-tee-pad.jpg" alt = "image of a disc golf tee pad" width = "591px" height = "451px"></img>
 </body>
 </html>
