Added a ordered list to building-tables

--- a/building-tables.html
+++ b/building-tables.html
@@ -56,5 +56,11 @@
         </tr>
         </tfoot>
     </table>
+
+    <ol>
+        <li>Star plastic is the most well-rounded plastic except for the price.</li>
+        <li>Champion plastic will yield the most durability per dollar.</li>
+        <li>DX and Pro are good for beginners who do not have much to spend on discs</li>
+    </ol>
 </body>
 </html>
