added 3 multiple choice questions

--- a/math-test.html
+++ b/math-test.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Calculus Test</title>
+	<title>Math Test</title>
 	<meta name = "keywords" content = "practice, test, calculus, dirivatives, integrals">
-	<meta name = "description" content = "This website is a free practice test for some of the concepts of calculus.">
+	<meta name = "description" content = "This website is a free practice test for basic addition, subtraction, multiplication and division..">
 </head>
 
 <body>
-	<h1>Calculus Test</h1>
+	<h1>Math Test</h1>
+	<form>
+		Name:</br>
+		<input type = "text">
+	</form>
+	<form>
+		<p>2 + 2 =</p>
+		<input type = "radio" value = 3> 3 </br>
+		<input type = "radio" value = 5> 5 </br>
+		<input type = "radio" value = 6> 6 </br>
+		<input type = "radio" value = 4> 4 </br>
+	</form>
+	<form>
+		<p>10 - 4 =</p>
+		<input type = "radio" value = 6> 6 </br>
+		<input type = "radio" value = 4> 4 </br>
+		<input type = "radio" value = 7> 7 </br>
+		<input type = "radio" value = 10> 10 </br>
+	</form>
+	<form>
+		<p>3 &times; 6 =</p>
+		<input type = "radio" value = 42> 42 </br>
+		<input type = "radio" value = 18> 18 </br>
+		<input type = "radio" value = 12> 12 </br>
+		<input type = "radio" value = 24> 24 </br>
+	</form>
 </body>
 </html>
