--- a/math-test.html
+++ b/math-test.html
@@ -2,36 +2,31 @@
 <html lang="en">
 <head>
 	<title>Math Test</title>
-	<meta name = "keywords" content = "practice, test, calculus, dirivatives, integrals">
-	<meta name = "description" content = "This website is a free practice test for basic addition, subtraction, multiplication and division..">
+	<meta name = "keywords" content = "practice, test, math, inequalities, word problem">
+	<meta name = "description" content = "This website is a free practice test for basic inequalities, multiplication and division.">
 </head>
 
 <body>
 	<h1>Math Test</h1>
 	<form>
-		Name:</br>
+		Name:<br>
 		<input type = "text">
-	</form>
-	<form>
-		<p>2 + 2 =</p>
-		<input type = "radio" value = 3> 3 </br>
-		<input type = "radio" value = 5> 5 </br>
-		<input type = "radio" value = 6> 6 </br>
-		<input type = "radio" value = 4> 4 </br>
-	</form>
-	<form>
-		<p>10 - 4 =</p>
-		<input type = "radio" value = 6> 6 </br>
-		<input type = "radio" value = 4> 4 </br>
-		<input type = "radio" value = 7> 7 </br>
-		<input type = "radio" value = 10> 10 </br>
-	</form>
-	<form>
+		<!--Start of the test-->
+		<p>2 &le; 2 =</p>
+		<input type = "radio" value = "true"> True </br>
+		<input type = "radio" value = "false"> False </br>
+		<p>10 &gt; 4?</p>
+		<input type = "radio" value = "true"> True </br>
+		<input type = "radio" value = "false"> False </br>
 		<p>3 &times; 6 =</p>
 		<input type = "radio" value = 42> 42 </br>
 		<input type = "radio" value = 18> 18 </br>
 		<input type = "radio" value = 12> 12 </br>
 		<input type = "radio" value = 24> 24 </br>
+		Tommy sold 24 glasses of lemonade and made $12 dollars. How many dollars did Tommy sell each glass of lemonade for?<br>
+		<input type = "text"><br>
+		<!--End of the test-->
+		<input type="submit">
 	</form>
 </body>
 </html>
