completed restaurant menu

--- a/restaurant-menu.html
+++ b/restaurant-menu.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Math Test</title>
+	<title>Restaurant Menu</title>
 	<meta name = "keywords" content = "restaurant menu, pizza, burgers, pancakes">
 	<meta name = "description" content = "This website is for displaying menus for a restaurant.">
 </head>
 
 <body>
 	<h1>Restaurant Menu</h1>
-    <div style = "width:400px; height:550px; color:#fff7e6">
-        <p>Test</p>
+    <div style = "width:400px; height:550px; background-color:#fff7e6; border-style:solid; border-width:medium; margin-bottom:50px;">
+        <p style = "font-size:20px; font-weight:bold; margin:20px;">Breakfast Menu</p>
+        <ul>
+            <li>Buttermilk Pancakes</li>
+            <li>Blueberry Pancakes</li>
+            <li>Chocolate Chip Pancakes</li>
+            <li>Bacon Omelette</li>
+            <li>Sausage Omelette</li>
+            <li>Veggie Omelette</li>
+            <li>Breakfast Sandwich</li>
+        </ul>
+        <div style = "color:#FFFFFF; background-image:url('documents/pancake.jpg'); width:300px; height:200px; margin:auto; background-repeat:no-repeat;">
+        </div>
+    </div>
+        <div style = "width:400px; height:550px; background-color:#fff7e6; border-style:solid; border-width:medium; margin-bottom:50px;">
+        <p style = "font-size:20px; font-weight:bold; margin:20px;">Lunch Menu</p>
+        <ul>
+            <li>Hamburger</li>
+            <li>Cheeseburger</li>
+            <li>Rodeo Burger</li>
+            <li>French Fries</li>
+            <li>Tater Tots</li>
+            <li>Sweet Potato Fries</li>
+            <li>Nachos</li>
+        </ul>
+        <div style = "color:#FFFFFF; background-image:url('documents/burger.jpg'); width:280px; height:280px; margin:auto; background-repeat:no-repeat;">
+        </div>
+    </div>
+    </div>
+        <div style = "width:400px; height:550px; background-color:#fff7e6; border-style:solid; border-width:medium; margin-bottom:50px;">
+        <p style = "font-size:20px; font-weight:bold; margin:20px;">Dinner Menu</p>
+        <ul>
+            <li>Cheese Pizza</li>
+            <li>Pepperoni Pizza</li>
+            <li>Sausage Pizza</li>
+            <li>Hawaiian Pizza</li>
+            <li>Veggie Pizza</li>
+            <li>Meat Lovers Pizza</li>
+            <li>Bread Sticks</li>
+        </ul>
+        <div style = "color:#FFFFFF; background-image:url('documents/pizza.jpg'); width:280px; height:280px; margin:auto; background-repeat:no-repeat;">
+        </div>
     </div>
 </body>
 </html>
