--- a/color-scheme.html
+++ b/color-scheme.html
@@ -8,6 +8,38 @@
 
 <body>
 	<h1>Color Scheme</h1>
-    
+    <table border = "1">
+        <thead>
+        <tr>
+            <th colspan="4">MSU Spartans</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td style="color:#FFFFFF; background-color:#18453B">Green</td>
+            <td style="color:#000000; background-color:#FFFFFF">White</td>
+            <td style="color:#FFFFFF; background-color:#9EE94D">Lime Green</td>
+            <td style="color:#FFFFFF; background-color:#000000">Black</td>
+        </tr>
+        <tr>
+            <td>#18453B</td>
+            <td>#FFFFFF</td>
+            <td>#9EE94D</td>
+            <td>#000000</td>
+        </tr>
+        <tr>
+            <td>24, 69, 59</td>
+            <td>255, 255, 255</td>
+            <td>158, 233, 77</td>
+            <td>0, 0, 0</td>
+        </tr>
+        <tr>
+            <td>167, 48%, 18%</td>
+            <td>0, 0%, 100%</td>
+            <td>89, 78%, 61%</td>
+            <td>0, 0%, 0%</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
