finsihed staff-page

--- a/staff-page.html
+++ b/staff-page.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-    <div style="float:top; background-color:darkgreen; color:azure; height:100px; font-size:50px;">
+    <div style="float:top; position:relative; top:-50px; right:10px; background-color:darkgreen; color:azure; height:100px; font-size:50px;">
         <p style="padding:20px">Guard Squad Inc.</p>
     </div>
     
-    <div style="float:left; background-color:darkgreen; color:azure; padding:20px; margin-right:10px; height:1000px">
+    <div style="float:left; position:relative; top:-50px; right:10px; background-color:darkgreen; color:azure; padding:20px; margin-right:10px; height:1000px; width:120px">
         <p>Home</p>
         <p>Info</p>
         <p>Staff</p>
@@ -19,8 +19,11 @@
         <p>Help and Contact</p>
     </div>
 
+    <div style="float:right; position:relative; top:-50px; background-color:darkgreen; color:azure; padding:20px; height:1000px; width:50px">
+        </div>
+
     <div style="overflow:auto;">
-        <img style="float:left;" src="documents/reid.jpg" alt="Picture of Reido" height="200px" width="160px">
+        <img style="float:left; padding:10px" src="documents/reid.jpg" alt="Picture of Reido" height="150px" width="150px">
         <p style="font-size:20px;">Reido</p>
         <p>Reido is the founder of Guard Squad Inc. It is called Guard Squad Inc because everybody in the squad is a
             "guard" in some way, shape, or form. Reid was a left guard on the varsity football team. He is an avid disc golf
@@ -30,7 +33,7 @@
     </div>
 
     <div style="overflow:auto;">
-        <img style="float:left;" src="documents/matt.jpg" alt="Picture of Poundo" height="200px" width="160px">
+        <img style="float:left; padding:10px;" src="documents/matt.jpg" alt="Picture of Poundo" height="150px" width="150px">
         <p style="font-size:20px;">Poundo</p>
         <p>Poundo is the backbone of Guard Squad Inc. He always shows up to every meeting on time and is just a good guy.
             He played right guard on the varsity football team. Poundo got his infamous nickname from way back in little league
@@ -40,7 +43,7 @@
     </div>
 
     <div style="overflow:auto;">
-        <img style="float:left;" src="documents/banger.jpg" alt="Picture of Banger" height="200px" width="160px">
+        <img style="float:left; padding:10px;" src="documents/banger.jpg" alt="Picture of Banger" height="150px" width="150px">
         <p style="font-size:20px;">Banger</p>
         <p>Banger is the gooniest member of Guard Squad Inc. He's somewhat inconsistant, but is still a valued member of the squad.
             He loves hockey, but became a part of Guard Squad Inc by being a backup/scout guard on the varsity football team.
@@ -50,9 +53,13 @@
     </div>
 
     <div style="overflow:auto;">
-        <img style="float:left;" src="documents/tyler.jpg" alt="Picture of Beau" height="200px" width="160px">
+        <img style="float:left; padding:10px;" src="documents/tyler.jpg" alt="Picture of Beau" height="150px" width="150px">
         <p style="font-size:20px;">Beau</p>
-        <p>Beau is the most recently added member of Guard Squad Inc. 
+        <p>Beau is the most recently added member of Guard Squad Inc. He was considered for application to the squad when he 
+            joined Reido, Poundo, and Banger for wings one Monday. Poundo and Beau often call each other 
+            strange compound names like "Cheese-ball" or "Beard-guy." It is a mystery where they come up with these psuedonyms, 
+            but they are quite goony. Beau was a point-guard on the varsity basketball team and plans to contuniue playing at 
+            Bay College.
         </p>
     </div>
 </body>
