completed scorecards 2 and 3

--- a/score-card1.html
+++ b/score-card1.html
@@ -114,7 +114,7 @@
             <td>3</td>
             <td class="final">27</td>
             <td class="final">56</td>
-            <td>+2</td>
+            <td class="final">+2</td>
         </tr>
         <tr class="scores">
             <td class="name">Balen</td>
@@ -139,7 +139,7 @@
             <td>3</td>
             <td class="final">25</td>
             <td class="final">50</td>
-            <td>-4</td>
+            <td class="final">-4</td>
         </tr>
         <tr class="scores">
             <td class="name">Hirth</td>
@@ -164,7 +164,7 @@
             <td>4</td>
             <td class="final">34</td>
             <td class="final">65</td>
-            <td>+11</td>
+            <td class="final">+11</td>
         </tr>
         <tr class="scores">
             <td class="name">Brett</td>
@@ -189,7 +189,7 @@
             <td>3</td>
             <td class="final">22</td>
             <td class="final">44</td>
-            <td>-10</td>
+            <td class="final">-10</td>
         </tr>
         </tbody>
     </table>
