--- a/imitation.html
+++ b/imitation.html
@@ -4,7 +4,6 @@
 	<title>Imitation</title>
 	<meta name = "keywords" content = "html, css, image, background image, border, drop shadow">
 	<meta name = "description" content = "This website is for testing CSS3 Styling on images.">
-    <link rel="stylesheet" type="text/css" href="css/imitation.css">
 </head>
 
 <style>
@@ -61,17 +60,18 @@
         height: 352px;
         width: 400px;
         -webkit-filter:blur(5px);
-        z-index: -1;
+        z-index: -100;
+        position: relative;
     }
 
     .theaterFore{
-        -webkit-filter:blur(0px);
         text-align: center;
         vertical-align: center;
         font-size: 40px;
         color:#FFFFFF;
         text-shadow:0px 5px 1px black;
-        z-index: 0;
+        z-index: 100;
+        position: relative;
     }
 </style>
 
