added navigation arrows for final project

--- a/flashcards.html
+++ b/flashcards.html
@@ -51,5 +51,8 @@
         <p class="term">Berlin Airlift</p>
         <p class="definition">1948 that supplied food and fuel to citizens of West Berlin when the Russians closed off land access to Berlin</p>
     </div>
+
+    <a href="responsive-blog.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="imitation.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
