--- a/flex-puzzle.html
+++ b/flex-puzzle.html
@@ -80,5 +80,8 @@
         <!--Missing Piece-->
         <img style="display:none" src="documents/Puzzle Pieces/puzzle1/puzzle2_D.jpg">
     </div>
+
+    <a href="score-card1.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="staff-page.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
