--- a/imitation.html
+++ b/imitation.html
@@ -84,5 +84,8 @@
     </div>
     <div class="butterfly"></div>
     <div class="theaterBack"><div class="theaterFore">Presenting</div></div>
+
+    <a href="flashcards.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="video-tutorial.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
