--- a/math-test.html
+++ b/math-test.html
@@ -28,5 +28,8 @@
 		<!--End of the test-->
 		<input type="submit">
 	</form>
+
+	<a href="color-scheme.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="building-tables.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
