--- a/news-article.html
+++ b/news-article.html
@@ -26,5 +26,8 @@
 		this type of system to move down southward to the midwestern and northwest United States, which is what has been happening
 		in the past few weeks.
 	</p>
+
+	<a href="starter-gallery.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="final-project.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
