--- a/responsive-blog.html
+++ b/responsive-blog.html
@@ -72,5 +72,8 @@
                 start. Let nothing stand in your way of your goals and don't forget to have a good time pursuing them.
         </p>
     </div>
+
+    <a href="final-project.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="flashcards.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
