--- a/score-card1.html
+++ b/score-card1.html
@@ -193,5 +193,8 @@
         </tr>
         </tbody>
     </table>
+
+    <a href="video-tutorial.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="flex-puzzle.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
