--- a/starter-gallery.html
+++ b/starter-gallery.html
@@ -15,5 +15,8 @@
     </p>
     <img src = "documents/disc-golf-putters.jpg" alt = "image of a few golf discs" width = "762px" height = "451px"></img></br>
     <img src = "documents/disc-golf-tee-pad.jpg" alt = "image of a disc golf tee pad" width = "591px" height = "451px"></img>
+
+    <a href="building-tables.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="news-article.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
