--- a/stylish-schedule.html
+++ b/stylish-schedule.html
@@ -87,5 +87,8 @@
             <td>1:00 AM</td>
         </tr>
     </table>
+
+    <a href="staff-page.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="restaurant-menu.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
