--- a/video-tutorial.html
+++ b/video-tutorial.html
@@ -44,5 +44,8 @@
         <p class="step">Example:</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/uxPdPpi5W4o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+
+    <a href="imitation.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="score-card1.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
