--- a/building-tables.html
+++ b/building-tables.html
@@ -62,5 +62,8 @@
         <li>Champion plastic will yield the most durability per dollar.</li>
         <li>DX and Pro are good for beginners who do not have much to spend on discs</li>
     </ol>
+
+    <a href="math-test.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="starter-gallery.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
