--- a/color-scheme.html
+++ b/color-scheme.html
@@ -41,5 +41,8 @@
         </tr>
         </tbody>
     </table>
+
+    <a href="restaurant-menu.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="math-test.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
