--- a/restaurant-menu.html
+++ b/restaurant-menu.html
@@ -51,5 +51,8 @@
         <div style = "color:#FFFFFF; background-image:url('documents/pizza.jpg'); width:280px; height:280px; margin:auto; background-repeat:no-repeat;">
         </div>
     </div>
+
+    <a href="stylish-schedule.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
+    <a href="color-scheme.html"><img style="position:fixed; top: 10px; right: 220px; height: auto; width: 200px; transform: scaleX(-1);" src="documents/arrow.png"></a>
 </body>
 </html>
