--- a/math-test.html
+++ b/math-test.html
@@ -27,6 +27,7 @@
 		<input type = "text"><br>
 		<!--End of the test-->
 		<input type="submit">
+		<h1>TEST</h1>
 	</form>
 
 	<a href="color-scheme.html"><img style="position:fixed; top: 10px; right: 20px; height: auto; width: 200px;" src="documents/arrow.png"></a>
